--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
+html {
+  background-color: #381313;
+}
+
 .App {
   text-align: center;
   background-color: #381313;
-
 }
 
 .App-logo {
   height: 10vmin;
   pointer-events: none;
-  padding:1px;
-  border:1px solid #021a40;
-  background-color:#fff;
+  padding: 1px;
+  border: 1px solid #021a40;
+  background-color: #fff;
 }
 
 .App-header {
@@ -37,16 +40,13 @@
 .link {
   color: rgb(118, 83, 83);
   font-size: 10px;
-
 }
 
 .link:visited {
   color: rgb(118, 83, 83);
 }
 
-
 .link-button {
- 
   border: 2px solid;
   padding: 10px;
   border-radius: 10px;
